# oar-priority-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: scan-worker.md  spec-compliance-audit.md
docs/adr/: 0001-qt-theme-evaluation.md  0002-defer-qt-material-for-ui-overhaul.md
docs/superpowers/plans/: 049-advanced-filter-builder.md  051-scan-issues-log-pane.md  2026-04-11-oar-priority-manager.md  2026-04-12-conditions-panel.md  2026-04-14-category-tags.md
src/oar_priority_manager/: __init__.py  __main__.py
src/oar_priority_manager/app/: __init__.py  config.py  (+1 more)
tests/: conftest.py
tests/integration/: test_tag_integration.py  test_write_clear_rescan.py
tests/smoke/: test_filter_builder_smoke.py  test_scan_issues_smoke.py  test_theme_compat.py  test_ui_smoke.py
tests/unit/: test_advanced_filter.py  test_anim_scanner.py  test_condition_filter_search.py  test_conditions_panel.py  test_conditions_renderer.py  test_config.py  test_details_panel_warnings.py  test_directory_picker.py  test_filter_bucket.py  test_filter_builder.py  test_filter_engine.py  test_filter_pill.py  test_main_window_advanced.py  test_main_window_none_guard.py  test_main_window_scan_issues.py  test_models.py  test_override_manager.py  test_pane_styled_background.py  test_parser.py  test_priority_resolver.py  test_scan_issues_pane.py  test_scan_progress_dialog.py  test_scan_worker.py  test_scanner.py  test_search_bar_scan_issues.py  test_serializer.py  test_stacks_panel.py  test_tag_engine.py  test_tree_model.py  test_tree_panel_enhancements.py  test_warning_report.py
(+33 files in other folders)
